# ldpr-backend

./: .dockerignore  .env.example  Dockerfile  Makefile  compose.yaml  pyproject.toml  shell.nix
.github/workflows/: deploy.yml
alembic/versions/: 2025_04_18_2349-fd99dc0581bc_.py  2025_04_19_2003-fee61c3b066c_.py  2025_04_19_2053-72aecf9c7a54_.py
dumps/: testing.sql
src/: __init__.py  app.py  settings.py  unit_of_work.py
src/adapters/: jwt_token.py
src/adapters/database/: repositories.py  repository_gateway.py
src/adapters/database/models/: __init__.py  anime.py  clients.py  contents.py  email.py  managers.py  news.py
src/adapters/notifications/: notifications.py  smtp.py  templates.py
src/admin/admin_models/: __init__.py  anime.py  client.py  email_template.py  episode.py  manager.py  news.py  season.py
src/api/: __init__.py  anime.py  authentication.py  client.py  news.py
src/schemas/admin/: anime.py  clients.py  email_template.py  episode.py  managers.py  news.py  season.py
src/schemas/api/: anime.py  authentication.py  client.py  news.py  seasons.py
src/schemas/mappers/: __init__.py  authentication.py  client.py  news.py
src/service/: anime.py  authentication.py  clients.py  news.py  seasons.py
src/utils/: dependencies.py  repositories_gateway.py
